feat: display product with manufacturer

--- a/aspnet-core/src/Store.Public.Web/Pages/Home/Index.cshtml
+++ b/aspnet-core/src/Store.Public.Web/Pages/Home/Index.cshtml
@@ -88,175 +88,35 @@
         </div>
     </section>
 <section class="section-box mt-30">
-    <div class="container">
-        <div class="border-bottom pb-25 head-main">
-        <h3>Loại sản phẩm</h3>
-        <p class="font-base">Chọn sản phẩm bạn muốn.</p>
-        <!-- Button slider-->
-        <div class="box-button-slider">
-            <div class="swiper-button-next swiper-button-next-group-2"></div>
-            <div class="swiper-button-prev swiper-button-prev-group-2"></div>
-        </div>
-        <!-- End Button slider-->
-        </div>
-        <div class="mt-10">
-        <div class="box-swiper">
-            <div class="swiper-container swiper-group-style-2">
-            <div class="swiper-wrapper pt-5">
-                <div class="swiper-slide">
-                <ul class="list-9-col">
-                    <li>
-                    <div class="box-category hover-up">
-                        <div class="image"><a href="shop-grid.html"><img src="assets/imgs/page/homepage2/cat-img-1.png" alt="Ecom"></a></div>
-                        <div class="text-info"><a class="font-sm color-gray-900 font-bold" href="shop-grid.html">Máy lọc không khí</a>
-                        <p class="font-xs color-gray-500">1025 món</p>
-                        </div>
-                    </div>
-                    </li>
-                    <li>
-                    <div class="box-category hover-up">
-                        <div class="image"><a href="shop-grid.html"><img src="assets/imgs/page/homepage2/cat-img-2.png" alt="Ecom"></a></div>
-                        <div class="text-info"><a class="font-sm color-gray-900 font-bold" href="shop-grid.html">Túi xách</a>
-                        <p class="font-xs color-gray-500">125 món</p>
-                        </div>
-                    </div>
-                    </li>
-                    <li>
-                    <div class="box-category hover-up">
-                        <div class="image"><a href="shop-grid.html"><img src="assets/imgs/page/homepage2/cat-img-3.png" alt="Ecom"></a></div>
-                        <div class="text-info"><a class="font-sm color-gray-900 font-bold" href="shop-grid.html">Bluetooth</a>
-                        <p class="font-xs color-gray-500">625 món</p>
-                        </div>
-                    </div>
-                    </li>
-                    <li>
-                    <div class="box-category hover-up">
-                        <div class="image"><a href="shop-grid.html"><img src="assets/imgs/page/homepage2/cat-img-4.png" alt="Ecom"></a></div>
-                        <div class="text-info"><a class="font-sm color-gray-900 font-bold" href="shop-grid.html">Đồ điện tử</a>
-                        <p class="font-xs color-gray-500">1025 món</p>
-                        </div>
-                    </div>
-                    </li>
-                    <li>
-                    <div class="box-category hover-up">
-                        <div class="image"><a href="shop-grid.html"><img src="assets/imgs/page/homepage2/cat-img-5.png" alt="Ecom"></a></div>
-                        <div class="text-info"><a class="font-sm color-gray-900 font-bold" href="shop-grid.html">Gaming</a>
-                        <p class="font-xs color-gray-500">1025 món</p>
-                        </div>
-                    </div>
-                    </li>
-                    <li>
-                    <div class="box-category hover-up">
-                        <div class="image"><a href="shop-grid.html"><img src="assets/imgs/page/homepage2/cat-img-6.png" alt="Ecom"></a></div>
-                        <div class="text-info"><a class="font-sm color-gray-900 font-bold" href="shop-grid.html">Ghế Gaming</a>
-                        <p class="font-xs color-gray-500">1025 món</p>
-                        </div>
-                    </div>
-                    </li>
-                    <li>
-                    <div class="box-category hover-up">
-                        <div class="image"><a href="shop-grid.html"><img src="assets/imgs/page/homepage2/cat-img-7.png" alt="Ecom"></a></div>
-                        <div class="text-info"><a class="font-sm color-gray-900 font-bold" href="shop-grid.html">Tủ lạnh</a>
-                        <p class="font-xs color-gray-500">1025 món</p>
-                        </div>
-                    </div>
-                    </li>
-                    <li>
-                    <div class="box-category hover-up">
-                        <div class="image"><a href="shop-grid.html"><img src="assets/imgs/page/homepage2/cat-img-8.png" alt="Ecom"></a></div>
-                        <div class="text-info"><a class="font-sm color-gray-900 font-bold" href="shop-grid.html">Đồ dùng bếp</a>
-                        <p class="font-xs color-gray-500">1025 món</p>
-                        </div>
-                    </div>
-                    </li>
-                    <li>
-                    <div class="box-category hover-up">
-                        <div class="image"><a href="shop-grid.html"><img src="assets/imgs/page/homepage2/cat-img-9.png" alt="Ecom"></a></div>
-                        <div class="text-info"><a class="font-sm color-gray-900 font-bold" href="shop-grid.html">Phụ kiện</a>
-                        <p class="font-xs color-gray-500">1025 món</p>
-                        </div>
-                    </div>
-                    </li>
-                    <li>
-                    <div class="box-category hover-up">
-                        <div class="image"><a href="shop-grid.html"><img src="assets/imgs/page/homepage2/cat-img-10.png" alt="Ecom"></a></div>
-                        <div class="text-info"><a class="font-sm color-gray-900 font-bold" href="shop-grid.html">Máy tính</a>
-                        <p class="font-xs color-gray-500">325 món</p>
-                        </div>
-                    </div>
-                    </li>
-                    <li>
-                    <div class="box-category hover-up">
-                        <div class="image"><a href="shop-grid.html"><img src="assets/imgs/page/homepage2/cat-img-11.png" alt="Ecom"></a></div>
-                        <div class="text-info"><a class="font-sm color-gray-900 font-bold" href="shop-grid.html">Camera</a>
-                        <p class="font-xs color-gray-500">1025 món</p>
-                        </div>
-                    </div>
-                    </li>
-                    <li>
-                    <div class="box-category hover-up">
-                        <div class="image"><a href="shop-grid.html"><img src="assets/imgs/page/homepage2/cat-img-12.png" alt="Ecom"></a></div>
-                        <div class="text-info"><a class="font-sm color-gray-900 font-bold" href="shop-grid.html">Giải trí</a>
-                        <p class="font-xs color-gray-500">6536 món</p>
-                        </div>
-                    </div>
-                    </li>
-                    <li>
-                    <div class="box-category hover-up">
-                        <div class="image"><a href="shop-grid.html"><img src="assets/imgs/page/homepage2/cat-img-13.png" alt="Ecom"></a></div>
-                        <div class="text-info"><a class="font-sm color-gray-900 font-bold" href="shop-grid.html">Thể thao</a>
-                        <p class="font-xs color-gray-500">2458 món</p>
-                        </div>
-                    </div>
-                    </li>
-                    <li>
-                    <div class="box-category hover-up">
-                        <div class="image"><a href="shop-grid.html"><img src="assets/imgs/page/homepage2/cat-img-14.png" alt="Ecom"></a></div>
-                        <div class="text-info"><a class="font-sm color-gray-900 font-bold" href="shop-grid.html">Máy tính bảng</a>
-                        <p class="font-xs color-gray-500">2563 món</p>
-                        </div>
-                    </div>
-                    </li>
-                    <li>
-                    <div class="box-category hover-up">
-                        <div class="image"><a href="shop-grid.html"><img src="assets/imgs/page/homepage2/cat-img-15.png" alt="Ecom"></a></div>
-                        <div class="text-info"><a class="font-sm color-gray-900 font-bold" href="shop-grid.html">Tivi</a>
-                        <p class="font-xs color-gray-500">1025 món</p>
-                        </div>
-                    </div>
-                    </li>
-                    <li>
-                    <div class="box-category hover-up">
-                        <div class="image"><a href="shop-grid.html"><img src="assets/imgs/page/homepage2/cat-img-16.png" alt="Ecom"></a></div>
-                        <div class="text-info"><a class="font-sm color-gray-900 font-bold" href="shop-grid.html">Đồng hồ</a>
-                        <p class="font-xs color-gray-500">1254 món</p>
-                        </div>
-                    </div>
-                    </li>
-                    <li>
-                    <div class="box-category hover-up">
-                        <div class="image"><a href="shop-grid.html"><img src="assets/imgs/page/homepage2/cat-img-17.png" alt="Ecom"></a></div>
-                        <div class="text-info"><a class="font-sm color-gray-900 font-bold" href="shop-grid.html">Flycam</a>
-                        <p class="font-xs color-gray-500">2589 món</p>
-                        </div>
-                    </div>
-                    </li>
-                    <li>
-                    <div class="box-category hover-up">
-                        <div class="image"><a href="shop-grid.html"><img src="assets/imgs/page/homepage2/cat-img-18.png" alt="Ecom"></a></div>
-                        <div class="text-info"><a class="font-sm color-gray-900 font-bold" href="shop-grid.html">Máy ảnh</a>
-                        <p class="font-xs color-gray-500">6358 món</p>
-                        </div>
-                    </div>
-                    </li>
-                </ul>
-                </div>
-            </div>
+<div class="container">
+    <div class="border-bottom pb-25 head-main">
+    <h3>Loại sản phẩm</h3>
+    <p class="font-base">Chọn sản phẩm bạn muốn.</p>
+    <!-- Button slider-->
+    <div class="box-button-slider">
+        <div class="swiper-button-next swiper-button-next-group-2"></div>
+        <div class="swiper-button-prev swiper-button-prev-group-2"></div>
+    </div>
+    <!-- End Button slider-->
+    </div>
+    <div class="mt-10">
+    <div class="box-swiper">
+        <div class="swiper-container swiper-group-style-2">
+        <div class="swiper-wrapper pt-5">
+            <div class="swiper-slide">
+            <ul class="list-9-col">
+                @foreach(var item in Model.Categories)
+            {
+                   <partial name="_CategoryItem" model="item"/>
+            }     
+            </ul>
             </div>
         </div>
         </div>
     </div>
-    </section>
+    </div>
+</div>
+</section>
 <section class="section-box pt-50">
     <div class="container">
         <div class="row">
@@ -401,110 +261,10 @@
         <div class="tab-content">
         <div class="tab-pane fade active show" id="tab-2-all" role="tabpanel" aria-labelledby="tab-2-all">
             <div class="row">
-            <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6 col-12">
-                <div class="card-grid-style-4">
-                <div class="card-grid-inner">
-                    <div class="image-box"><a href="shop-vendor-single.html"><img src="assets/imgs/page/homepage2/img-microsoft.png" alt="Ecom"></a></div>
-                    <div class="info-right"><a href="shop-vendor-single.html"><img src="assets/imgs/page/homepage2/microsoft.svg" alt="Ecom"></a>
-                    <p class="font-xs color-brand-3">PC, Laptop, Smart Watch, Gaming Gear ...</p>
-                    <div class="divide mb-5"></div>
-                    <div class="font-lg-bold color-brand-3">Up to 25% off</div>
-                    <div class="box-link"><a class="btn btn-link-brand-2 btn-arrow-brand-2 btn-arrow-small text-lowercase pt-0 pb-0" href="shop-vendor-single.html">Shop Now</a></div>
-                    </div>
-                </div>
-                </div>
-            </div>
-            <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6 col-12">
-                <div class="card-grid-style-4">
-                <div class="card-grid-inner">
-                    <div class="image-box"><a href="shop-vendor-single.html"><img src="assets/imgs/page/homepage2/img-nokia.png" alt="Ecom"></a></div>
-                    <div class="info-right"><a href="shop-vendor-single.html"><img src="assets/imgs/page/homepage2/nokia.svg" alt="Ecom"></a>
-                    <p class="font-xs color-brand-3">PC, Laptop, Smart Watch, Gaming Gear ...</p>
-                    <div class="divide mb-5"></div>
-                    <div class="font-lg-bold color-brand-3">Up to 30% off</div>
-                    <div class="box-link"><a class="btn btn-link-brand-2 btn-arrow-brand-2 btn-arrow-small text-lowercase pt-0 pb-0" href="shop-vendor-single.html">Shop Now</a></div>
-                    </div>
-                </div>
-                </div>
-            </div>
-            <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6 col-12">
-                <div class="card-grid-style-4">
-                <div class="card-grid-inner">
-                    <div class="image-box"><a href="shop-vendor-single.html"><img src="assets/imgs/page/homepage2/img-panasonic.png" alt="Ecom"></a></div>
-                    <div class="info-right"><a href="shop-vendor-single.html"><img src="assets/imgs/page/homepage2/panasonic.svg" alt="Ecom"></a>
-                    <p class="font-xs color-brand-3">PC, Laptop, Smart Watch, Gaming Gear ...</p>
-                    <div class="divide mb-5"></div>
-                    <div class="font-lg-bold color-brand-3">Up to 55% off</div>
-                    <div class="box-link"><a class="btn btn-link-brand-2 btn-arrow-brand-2 btn-arrow-small text-lowercase pt-0 pb-0" href="shop-vendor-single.html">Shop Now</a></div>
-                    </div>
-                </div>
-                </div>
-            </div>
-            <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6 col-12">
-                <div class="card-grid-style-4">
-                <div class="card-grid-inner">
-                    <div class="image-box"><a href="shop-vendor-single.html"><img src="assets/imgs/page/homepage2/img-sharp.png" alt="Ecom"></a></div>
-                    <div class="info-right"><a href="shop-vendor-single.html"><img src="assets/imgs/page/homepage2/sharp.svg" alt="Ecom"></a>
-                    <p class="font-xs color-brand-3">PC, Laptop, Smart Watch, Gaming Gear ...</p>
-                    <div class="divide mb-5"></div>
-                    <div class="font-lg-bold color-brand-3">Up to 65% off</div>
-                    <div class="box-link"><a class="btn btn-link-brand-2 btn-arrow-brand-2 btn-arrow-small text-lowercase pt-0 pb-0" href="shop-vendor-single.html">Shop Now</a></div>
-                    </div>
-                </div>
-                </div>
-            </div>
-            <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6 col-12">
-                <div class="card-grid-style-4">
-                <div class="card-grid-inner">
-                    <div class="image-box"><a href="shop-vendor-single.html"><img src="assets/imgs/page/homepage2/img-philip.png" alt="Ecom"></a></div>
-                    <div class="info-right"><a href="shop-vendor-single.html"><img src="assets/imgs/page/homepage2/philip.svg" alt="Ecom"></a>
-                    <p class="font-xs color-brand-3">PC, Laptop, Smart Watch, Gaming Gear ...</p>
-                    <div class="divide mb-5"></div>
-                    <div class="font-lg-bold color-brand-3">Up to 19% off</div>
-                    <div class="box-link"><a class="btn btn-link-brand-2 btn-arrow-brand-2 btn-arrow-small text-lowercase pt-0 pb-0" href="shop-vendor-single.html">Shop Now</a></div>
-                    </div>
-                </div>
-                </div>
-            </div>
-            <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6 col-12">
-                <div class="card-grid-style-4">
-                <div class="card-grid-inner">
-                    <div class="image-box"><a href="shop-vendor-single.html"><img src="assets/imgs/page/homepage2/img-casio.png" alt="Ecom"></a></div>
-                    <div class="info-right"><a href="shop-vendor-single.html"><img src="assets/imgs/page/homepage2/casio.svg" alt="Ecom"></a>
-                    <p class="font-xs color-brand-3">PC, Laptop, Smart Watch, Gaming Gear ...</p>
-                    <div class="divide mb-5"></div>
-                    <div class="font-lg-bold color-brand-3">Up to 15% off</div>
-                    <div class="box-link"><a class="btn btn-link-brand-2 btn-arrow-brand-2 btn-arrow-small text-lowercase pt-0 pb-0" href="shop-vendor-single.html">Shop Now</a></div>
-                    </div>
-                </div>
-                </div>
-            </div>
-            <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6 col-12">
-                <div class="card-grid-style-4">
-                <div class="card-grid-inner">
-                    <div class="image-box"><a href="shop-vendor-single.html"><img src="assets/imgs/page/homepage2/img-acer.png" alt="Ecom"></a></div>
-                    <div class="info-right"><a href="shop-vendor-single.html"><img src="assets/imgs/page/homepage2/acer.svg" alt="Ecom"></a>
-                    <p class="font-xs color-brand-3">PC, Laptop, Smart Watch, Gaming Gear ...</p>
-                    <div class="divide mb-5"></div>
-                    <div class="font-lg-bold color-brand-3">Up to 20% off</div>
-                    <div class="box-link"><a class="btn btn-link-brand-2 btn-arrow-brand-2 btn-arrow-small text-lowercase pt-0 pb-0" href="shop-vendor-single.html">Shop Now</a></div>
-                    </div>
-                </div>
-                </div>
-            </div>
-            <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6 col-12">
-                <div class="card-grid-style-4">
-                <div class="card-grid-inner">
-                    <div class="image-box"><a href="shop-vendor-single.html"><img src="assets/imgs/page/homepage2/img-toshiba.png" alt="Ecom"></a></div>
-                    <div class="info-right"><a href="shop-vendor-single.html"><img src="assets/imgs/page/homepage2/toshiba.svg" alt="Ecom"></a>
-                    <p class="font-xs color-brand-3">PC, Laptop, Smart Watch, Gaming Gear ...</p>
-                    <div class="divide mb-5"></div>
-                    <div class="font-lg-bold color-brand-3">Up to 35% off</div>
-                    <div class="box-link"><a class="btn btn-link-brand-2 btn-arrow-brand-2 btn-arrow-small text-lowercase pt-0 pb-0" href="shop-vendor-single.html">Shop Now</a></div>
-                    </div>
-                </div>
-                </div>
-            </div>
+                    @foreach(var item in Model.Manufacturers)
+                    {
+                        <partial name="_ManufacturerItem" model="item"/>
+                    }
             </div>
         </div>
         </div>
