--- a/aspnet-core/src/Store.Public.Web/Pages/Products/Details.cshtml
+++ b/aspnet-core/src/Store.Public.Web/Pages/Products/Details.cshtml
@@ -11,9 +11,8 @@
     <div class="breadcrumbs-div">
         <div class="container">
             <ul class="breadcrumb">
-                <li><a class="font-xs color-gray-1000" href="/">Home</a></li>
-                <li><a class="font-xs color-gray-500" href="shop-grid.html">@Model.Category.Name</a></li>
-
+                <li><a class="font-xs color-gray-1000" href="/">Trang chủ</a></li>
+                <li><a class="font-xs color-gray-500" href="shop-grid.html">@Model.Category.Name</a></li
             </ul>
         </div>
     </div>
