--- a/aspnet-core/src/Store.Public.Web/Pages/Products/Manufacturer.cshtml
+++ b/aspnet-core/src/Store.Public.Web/Pages/Products/Manufacturer.cshtml
@@ -1,11 +1,11 @@
-﻿@page "/products/{code}.html/{pageNumber:int?}"
-@model Store.Public.Web.Pages.Products.CategoryModel;
+﻿@page "/manufacturer/{code}.html/{pageNumber:int?}"
+@model Store.Public.Web.Pages.Products.ManufacturerModel;
 <div class="section-box">
     <div class="breadcrumbs-div">
         <div class="container">
             <ul class="breadcrumb">
                 <li><a class="font-xs color-gray-1000" href="/">Trang chủ</a></li>
-                <li><a class="font-xs color-gray-500">@Model.Category.Name</a></li>
+                <li><a class="font-xs color-gray-500">@Model.Manufacturer.Name</a></li>
             </ul>
         </div>
     </div>
@@ -40,21 +40,21 @@
                                     </ul>
                                 </div>
                             </div>
-                            <div class="d-inline-block"><a class="view-type-grid mr-5 active" href="#"></a></div>
+                            <div class="d-inline-block"><a class="view-type-grid mr-5 active" href="shop-grid.html"></a></div>
                         </div>
                     </div>
                 </div>
-                <div class="row mt-20">  
-                    @if(Model.ProductData.Results.Count < 1)
+                <div class="row mt-20"> 
+                    @if (Model.ProductData.Results.Count < 1)
                     {
-                       <section class="section-box shop-template mt-60">
-                        <div class="container">
-                            <div class="text-center mb-150 mt-50"> 
-                            <div class="image-404 mb-50"> <img src="/assets/imgs/page/account/404.png" alt="Ecom"></div>
-                            <h3>Hiện sản phẩm đã hết hàng</h3>                           
+                        <section class="section-box shop-template mt-60">
+                            <div class="container">
+                                <div class="text-center mb-150 mt-50"> 
+                                    <div class="image-404 mb-50"> <img src="/assets/imgs/page/account/404.png" alt="Ecom"></div>
+                                    <h3>Hiện sản phẩm đã hết hàng</h3>                           
+                                </div>
                             </div>
-                        </div>
-                    </section>
+                        </section>
                     }
                     else
                     {
@@ -62,10 +62,11 @@
                         {
                             <partial name="_ProductItem1" model="item" />
                         }
-                    }                                                                   
+
+                    }
                 </div>
-        <partial name="_Paginator" model="Model.ProductData" />
-    </div>
+               <partial name="_Paginator" model="Model.ProductData" />
+            </div>
             <div class="col-lg-3 order-last order-lg-first">
                 <div class="sidebar-border mb-0">
                     <div class="sidebar-head">
@@ -75,7 +76,7 @@
                         <ul class="list-nav-arrow">
                             @foreach (var item in Model.Categories)
                             {
-                              <li><a href="/products/@(item.Code).html">@item.Name<span class="number">@item.productCount</span></a></li>
+                                  <li><a href="/products/@(item.Code).html">@item.Name<span class="number">@item.productCount</span></a></li>
                             }
                         </ul>                      
                     </div>
@@ -86,17 +87,15 @@
                     </div>
                     <div class="sidebar-content">
                         <ul class="list-nav-arrow">
-                            
                             @foreach (var item in Model.Manufacturers)
                             {
-                              <li><a href="/manufacturer/@(item.Code).html">@item.Name<span class="number">@item.productCount</span></a></li>
-                            }
-                            
+                               <li><a href="/manufacturer/@(item.Code).html">@item.Name<span class="number">@item.productCount</span></a></li>
+                            }                        
                         </ul>                      
                     </div>
                 </div>
             </div>
-            
+
         </div>
     </div>
 </div>
