--- a/aspnet-core/src/Store.Public.Web/Pages/Shared/_ProductItem1.cshtml
+++ b/aspnet-core/src/Store.Public.Web/Pages/Shared/_ProductItem1.cshtml
@@ -1,27 +1,28 @@
-﻿@using Store.Public.Products
+﻿@using Store.Public.Manufacturers
+@using Store.Public.Products
 @model Store.Public.Products.ProductInListDto
 @inject IProductsAppService _productsAppService;
+@inject IManufacturersAppService _manufacturersAppService;
 @{
     var url = $"/products/{Model.CategorySlug}/{Model.Slug}.html";
     var fileContent = await _productsAppService.GetThumbnailImageAsync(Model.ThumbnailPicture);
     var base64Image = Store.Helpers.ImageHelper.ShowBase64(Model.ThumbnailPicture, fileContent);
+    var getManufacturer = _manufacturersAppService.GetByIdAsync(Model.ManufacturerId);
 }
 <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-12">
     <div class="card-grid-style-3">
         <div class="card-grid-inner">
             <div class="tools">
                 <a class="btn btn-trend btn-tooltip mb-10" href="#" aria-label="Trend" data-bs-placement="left"></a>
-                <a class="btn btn-wishlist btn-tooltip mb-10" href="shop-wishlist.html" aria-label="Add To Wishlist"></a>
-                <a class="btn btn-compare btn-tooltip mb-10" href="shop-compare.html" aria-label="Compare"></a>
-                <a class="btn btn-quickview btn-tooltip" aria-label="Quick view" href="#ModalQuickview" data-bs-toggle="modal"></a>
+                <a class="btn btn-wishlist btn-tooltip mb-10" href="#" aria-label="Add To Wishlist"></a>
+                <a class="btn btn-quickview btn-tooltip" aria-label="Quick view" href="#" data-bs-toggle="modal"></a>
             </div>
             <div class="image-box">
-                @*<span class="label bg-brand-2">-17%</span>*@
                 <a href="@url"><img src="@base64Image" alt="Ecom"></a>
             </div>
             <div class="info-right">
-                <a class="font-xs color-gray-500" href="/manufacture/@(Model.ManufacturerId).html">@Model.ManufacturerName</a><br>
-                <a class="color-brand-3 font-sm-bold" href="@url">@Model.Name</a>
+                <a class="font-xs color-gray-500" href="/manufacturer/@(getManufacturer.Result.Code).html">@Model.ManufacturerName</a><br>
+                <a class="color-brand-3 font-sm-bold ellipsis" href="@url">@Model.Name</a>
                 <div class="rating">
                     <img src="/assets/imgs/template/icons/star.svg" alt="Ecom">
                     <img src="/assets/imgs/template/icons/star.svg" alt="Ecom">
@@ -31,10 +32,9 @@
                     <span class="font-xs color-gray-500">(65)</span>
                 </div>
                 <div class="price-info">
-                    <strong class="font-lg-bold color-brand-3 price-main">@Model.SellPrice.ToString("N0")</strong>
-                    @*<span class="color-gray-500 price-line">$3225.6</span>*@
+                    <strong class="font-lg-bold color-brand-3 price-main">@String.Format("{0:n0}đ", @Model.SellPrice)</strong>
                 </div>
-                <div class="mt-20 box-btn-cart"><a class="btn btn-cart" href="/shop-cart.html?action=add&id=@Model.Id">Add To Cart</a></div>
+                <div class="mt-20 box-btn-cart"><a class="btn btn-cart" href="/shop-cart.html?action=add&id=@Model.Id">Thêm vào giỏ</a></div>
                 <ul class="list-features">
                     <li>27-inch (diagonal) Retina 5K display</li>
                     <li>3.1GHz 6-core 10th-generation Intel Core i5</li>
