--- a/aspnet-core/src/Store.Public.Web/wwwroot/global-styles.css
+++ b/aspnet-core/src/Store.Public.Web/wwwroot/global-styles.css
@@ -1,4 +1,4 @@
-/* Your Global Styles */
+﻿/* Your Global Styles */
 
 :root .lpx-brand-logo {
     --lpx-logo: url('/images/logo/leptonx/logo-light.png');
